--- a/src/scss/style-new-v.scss
+++ b/src/scss/style-new-v.scss
@@ -5816,6 +5816,9 @@ textarea {
 				@media only screen and (max-width: 639px) {
 					padding: 60px 20px 35px 20px;
 				}
+				.auto-ria-p & {
+					height: 100%;
+				}
 				img {
 					height: 210px;
 					width: auto;
@@ -5848,9 +5851,9 @@ textarea {
 					.auto-ria-p & {
 						font-size: 24px;
 						line-height: 24px;
+						height: auto !important;
 						@media only screen and (max-width: 639px) {
 							font-size: 20px;
-							height: auto !important;
 						}
 					}
 				}
@@ -5931,17 +5934,23 @@ textarea {
 	padding-bottom: 40px;
 	.wrap {
 		background: url(../img/bg-8.png) no-repeat center;
-		background-size: cover;
+		background-size: 105%;
 		margin-bottom: 0;
 		padding: 60px;
 		position: relative;
 		border-radius: 8px;
 		overflow: hidden;
+		@media only screen and (max-width: 1439px) {
+			background-size: 133%;
+		}
 		@media only screen and (max-width: 1279px) {
 			padding: 30px;
+			background-size: 145%;
 		}
 		@media only screen and (max-width: 991px) {
 			padding: 20px 16px;
+			background: url(../img/bg-8-mob.png) no-repeat center;
+			background-size: cover;
 		}
 		.banner-auto-ria__info {
 			width: calc(100% - 605px);
@@ -6525,6 +6534,7 @@ textarea {
 				align-items: center;
 				position: relative;
 				height: 100%;
+				overflow: hidden;
 				@media only screen and (max-width: 640px) {
 					padding: 14px 20px;
 					padding-bottom: 190px;
@@ -6540,7 +6550,7 @@ textarea {
 				}
 				.img-wrap {
 					height: 265px;
-					width: max-content;
+					width: 80%;
 					position: absolute;
 					bottom: 0;
 					left: 50%;
@@ -6549,12 +6559,22 @@ textarea {
 						height: 180px;
 					}
 					&.position-right {
-						right: 0;
+						right: -5%;
+						bottom: -5px;
 						left: unset;
 						transform: unset;
+						@media only screen and (max-width: 1439px) {
+							right: -10%;
+						}
+						@media only screen and (max-width: 640px) {
+							right: -17%;
+						}
+						@media only screen and (max-width: 420px) {
+							right: -12%;
+						}
 					}
 					img {
-						object-fit: cover;
+						object-fit: contain;
 						height: 100%;
 					}
 				}
