--- a/src/scss/style-new-v.scss
+++ b/src/scss/style-new-v.scss
@@ -6858,8 +6858,9 @@ textarea {
 		}
 	}
 	.field-check-autoria {
+		display: none;
 		&.active {
-			display: none;
+			display: block;
 		}
 	}
 }
