--- a/src/scss/style-new-v.scss
+++ b/src/scss/style-new-v.scss
@@ -6353,6 +6353,9 @@ textarea {
 			border-radius: 12px;
 			overflow: hidden;
 			margin-bottom: 15px;
+			@media only screen and (max-width: 992px) {
+				height: 250px;
+			}
 			img {
 				object-fit: cover;
 				object-position: center;
